--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.5.1",
-    "ocpp-eliftech": "^1.0.2",
+    "ocpp-eliftech": "ampeco/cpd-ocpp",
     "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
