--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.ocpp",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "Adapter for OCPP 1.6",
   "author": {
     "name": "Moritz Heusinger",
@@ -18,34 +18,35 @@
     "url": "git@github.com:foxriver76/ioBroker.ocpp.git"
   },
   "dependencies": {
+    "@ampeco/ocpp-eliftech": "https://github.com/ampeco/cpd-ocpp/tarball/master",
     "@iobroker/adapter-core": "^2.5.1",
-    "ocpp-eliftech": "https://github.com/ampeco/cpd-ocpp/tarball/master",
     "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^2.2.1",
+    "@alcalzone/release-script": "^3.4.2",
+    "@alcalzone/release-script-plugin-iobroker": "^3.4.1",
     "@iobroker/testing": "^2.5.2",
-    "@types/chai": "^4.2.22",
+    "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.4",
     "@types/gulp": "^4.0.9",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^14.17.32",
+    "@types/node": "^14.18.5",
     "@types/proxyquire": "^1.3.28",
     "@types/sinon": "^10.0.6",
-    "@types/sinon-chai": "^3.2.5",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@types/sinon-chai": "^3.2.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.6.0",
     "gulp": "^4.0.2",
     "mocha": "^9.1.3",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
-    "source-map-support": "^0.5.20",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.4.0",
     "typescript": "~4.4.4"
   },
@@ -71,7 +72,7 @@
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
     "lint": "eslint --ext .ts src/",
-    "release": "release-script"
+    "release": "release-script -p iobroker"
   },
   "bugs": {
     "url": "https://github.com/foxriver76/ioBroker.ocpp/issues"
