--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.ocpp",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Adapter for OCPP 1.6",
   "author": {
     "name": "Moritz Heusinger",
@@ -40,8 +40,11 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "gulp": "^4.0.2",
     "mocha": "^9.1.3",
+    "prettier": "^2.5.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
