--- a/package.json
+++ b/package.json
@@ -23,35 +23,35 @@
     "babel-runtime": "^6.26.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^3.5.6",
-    "@alcalzone/release-script-plugin-iobroker": "^3.5.7",
-    "@iobroker/testing": "^2.5.6",
-    "@types/chai": "^4.3.0",
+    "@alcalzone/release-script": "^3.5.9",
+    "@alcalzone/release-script-plugin-iobroker": "^3.5.9",
+    "@iobroker/testing": "^2.6.0",
+    "@types/chai": "^4.3.1",
     "@types/chai-as-promised": "^7.1.5",
     "@types/gulp": "^4.0.9",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^14.18.5",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^14.18.22",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^10.0.6",
+    "@types/sinon": "^10.0.12",
     "@types/sinon-chai": "^3.2.8",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "axios": "^0.24.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.11.0",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "gulp": "^4.0.2",
     "mocha": "^9.2.2",
-    "prettier": "^2.6.0",
+    "prettier": "^2.7.1",
     "proxyquire": "^2.1.3",
     "rimraf": "^3.0.2",
-    "sinon": "^13.0.1",
+    "sinon": "^13.0.2",
     "sinon-chai": "^3.7.0",
     "source-map-support": "^0.5.21",
-    "ts-node": "^10.7.0",
-    "typescript": "~4.6.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.6.4"
   },
   "main": "build/main.js",
   "files": [
